force-app/main/default/objects/BSF_Error_Log__c/fields/Error_Description_Long__c.field-meta.xml
<CustomField>
    <fullName>Error_Description_Long__c</fullName>
    <label>Error Description Long</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>