force-app/main/default/objects/BSF_Error_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object Name specifies the object on which the error has occurred</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account_Marketing_Program__c</fullName>
            </value>
            <value>
                <fullName>Account_Portfolio_Assignment__c</fullName>
            </value>
            <value>
                <fullName>AccountTeamMember</fullName>
            </value>
            <value>
                <fullName>Biomed_Collection_Op_Center__c</fullName>
            </value>
            <value>
                <fullName>BSF_Portfolio__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity_Promotion__c</fullName>
            </value>
            <value>
                <fullName>OpportunityContactRole</fullName>
            </value>
            <value>
                <fullName>OpportunityLineItem</fullName>
            </value>
            <value>
                <fullName>OpportunitySplit</fullName>
            </value>
            <value>
                <fullName>OpportunityTeamMember</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>OrderItem</fullName>
            </value>
            <value>
                <fullName>Portfolio_Assignment__c</fullName>
            </value>
            <value>
                <fullName>sked__Account_Tag__c</fullName>
            </value>
            <value>
                <fullName>sked__Activity__c</fullName>
            </value>
            <value>
                <fullName>sked__Activity_Resource__c</fullName>
            </value>
            <value>
                <fullName>sked__Availability__c</fullName>
            </value>
            <value>
                <fullName>sked__Job__c</fullName>
            </value>
            <value>
                <fullName>sked__Job_Allocation__c</fullName>
            </value>
            <value>
                <fullName>sked__Job_Tag__c</fullName>
            </value>
            <value>
                <fullName>sked__Location__c</fullName>
            </value>
            <value>
                <fullName>Sked__Region__c</fullName>
            </value>
            <value>
                <fullName>sked__Resource__c</fullName>
            </value>
            <value>
                <fullName>sked__Tag__c</fullName>
            </value>
            <value>
                <fullName>sked_Drive__c</fullName>
            </value>
            <value>
                <fullName>sked_Drive_Bag__c</fullName>
            </value>
            <value>
                <fullName>sked_Drive_Change_Request__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>