force-app/main/default/objects/BSF_Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Portfolio</fullName>
            </value>
            <value>
                <fullName>Assign Account to Portfolio</fullName>
            </value>
            <value>
                <fullName>Populate Account Team</fullName>
            </value>
            <value>
                <fullName>Create Oppty Team</fullName>
            </value>
            <value>
                <fullName>Run Logs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>