force-app/main/default/objects/BSF_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ApexClass__c</columns>
    <columns>Method__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Error_Description_Long__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApexClass__c</field>
        <operation>equals</operation>
        <value>OrderCloningService</value>
    </filters>
    <label>All</label>
</ListView>