force-app/main/default/objects/BSF_Error_Log__c/listViews/Drive_Generation_Failure.listView-meta.xml
<ListView>
    <fullName>Drive_Generation_Failure</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ApexClass__c</columns>
    <columns>Object_RecordId__c</columns>
    <columns>Method__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Error_Description_Long__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Priti Jana</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>ApexClass__c</field>
        <operation>notEqual</operation>
        <value>OpportunityService</value>
    </filters>
    <label>Drive Generation Failure</label>
</ListView>