force-app/main/default/objects/BSF_Error_Log__c/listViews/SyncOppsWithDrives.listView-meta.xml
<ListView>
    <fullName>SyncOppsWithDrives</fullName>
    <columns>NAME</columns>
    <columns>ApexClass__c</columns>
    <columns>Method__c</columns>
    <columns>Error_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Description_Long__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/6/2025 10:54 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Automated Process,Amanda MacPherson,Theresa Benfer</value>
    </filters>
    <label>SyncOppsWithDrives</label>
</ListView>